# SHIFT_TEST

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
SHIFT/: __init__.py  __main__.py  config.py
SHIFT/app/api/: __init__.py
SHIFT/app/api/router/user/: main.py
SHIFT/app/controller/: __init__.py
SHIFT/app/controller/authorization/: __init__.py  authorization.py
SHIFT/app/controller/crud/: __init__.py  session.py
SHIFT/app/controller/crud/user/: user.py
SHIFT/app/model/: __init__.py
SHIFT/app/model/database/: __init__.py
SHIFT/app/model/database/migrations/alembic/: env.py
SHIFT/app/model/database/migrations/alembic/versions/: d9d2eeffa0ce_initial_migration.py
SHIFT/app/model/database/protocols/: __init__.py  database.py
SHIFT/app/model/database/schemas/: schemas.py
SHIFT/app/model/pydantic_models/: __init__.py
SHIFT/app/model/pydantic_models/user/: user.py
tests/: test.py
